@@ -5,5 +5,21 @@ A demo running multiple tasks
 ## How to run in local
 
 ```
+sdk env
+
+//ExecutorService
 mvn verify exec:java -Dexec.mainClass="info.jab.demos.SpinnerDemo"
+
+//CompletableFuture
+mvn verify exec:java -Dexec.mainClass="info.jab.demos.SpinnerDemo2"
+
+//Loom
+mvn clean package
+java --enable-preview -p target/spinner-demo-0.1.0-SNAPSHOT.jar -m info.jab.demos
+```
+
+## Others commands
+
+```
+mvn prettier:write
 ```
